--- a/sass/style.scss
+++ b/sass/style.scss
@@ -195,9 +195,9 @@ Footer
 @import 'modules/video-popup-card/video-popup-card-three';
 
 //Portfolio Slider
-@import 'modules/project-card/project-card';
-@import 'modules/project-card/project-card-two';
-@import 'modules/project-card/project-card-three';
+// @import 'modules/project-card/project-card';
+// @import 'modules/project-card/project-card-two';
+// @import 'modules/project-card/project-card-three';
 
 // Masonry Portfolio Gallery
 @import 'modules/masonary-portfolio-gallery/masonary-portfolio-gallery';
