--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -318,6 +318,73 @@
     }
   }
 }
+
+// Project slider style-1
+.project-area {
+  &.style-1 {
+    .section-title-wrapper {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background-color: $white;
+      z-index: 2;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background-color: $white;
+      }
+    }
+    .project-slider {
+      .project-arrow-btn {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 74px;
+        height: 74px;
+        background-color: $primary-color;
+        border-radius: 50%;
+        z-index: 3;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        i {
+          color: $white;
+          font-size: 28px;
+          font-weight: 300;
+        }
+        &:hover {
+          background-color: $black;
+        }
+        &.prev-btn {
+          left: 0;
+          background-color: $black;
+          color: $white;
+          transform: translate(-50%, -50%);
+        }
+        &.next-btn {
+          right: -32%;
+        }
+      }
+    }
+    .slick-slide {
+      margin: 0 15px;
+    }
+    .slick-track {
+      margin-left: -15px;
+    }
+    .slick-list {
+      overflow: visible;
+    }
+  }
+}
 .video-popup-area {
   &.style-2 {
     .video-popup-image {
