add: subscribe-area style-1

--- a/css/style.css
+++ b/css/style.css
@@ -83810,6 +83810,86 @@ ul.children {
   overflow: visible;
 }
 
+.subscribe-area.style-1 {
+  max-height: 621px;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.subscribe-area.style-1 .subscribe-form-widget {
+  height: 651px;
+  background-color: #222;
+  padding: 0 74px;
+  margin-top: -30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  text-align: center;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .subscribe-area.style-1 .subscribe-form-widget {
+    margin-top: 0;
+    padding: 0 15px;
+  }
+}
+.subscribe-area.style-1 .subscribe-form-widget .short-title {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 5.4px;
+  text-transform: uppercase;
+  color: #aa8453;
+}
+.subscribe-area.style-1 .subscribe-form-widget .title {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+  color: #ffffff;
+}
+@media (max-width: 1700px) {
+  .subscribe-area.style-1 .subscribe-form-widget .title br {
+    display: none;
+  }
+}
+.subscribe-area.style-1 .subscribe-form-widget .mc4wp-form-fields {
+  flex-direction: column;
+  border-radius: 0;
+  gap: 10px;
+  margin-top: 60px;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .subscribe-area.style-1 .subscribe-form-widget .mc4wp-form-fields {
+    justify-content: center;
+  }
+}
+.subscribe-area.style-1 .subscribe-form-widget .single-field input {
+  border: none;
+  border-bottom: 1px solid #5c5c5c;
+  background: transparent;
+  color: #222;
+  padding: 27px 0;
+  width: 391px;
+  text-align: center;
+}
+.subscribe-area.style-1 .subscribe-form-widget .submit-btn {
+  padding: 7px 43px;
+  color: #ffffff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px;
+  border: 1px solid transparent;
+}
+.subscribe-area.style-1 .subscribe-form-widget .submit-btn:hover {
+  background-color: #222;
+  border-color: #ffffff;
+}
+
 @media only screen and (min-width: 0px) and (max-width: 576px) {
   .video-popup-area.style-2 .video-popup-image {
     height: 250px;
@@ -83937,64 +84017,6 @@ ul.children {
   .portfolio-area.style-1 .section-title.two-column .sec-desc .desc {
     margin: 0;
   }
-}
-
-.subscribe-area {
-  padding-top: 82px;
-  padding-bottom: 93px;
-  background-position: center !important;
-  background-repeat: no-repeat !important;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .subscribe-area {
-    padding: 80px 0;
-  }
-}
-.subscribe-area .section-title {
-  margin-bottom: 40px;
-}
-.subscribe-area .section-title .title {
-  margin-bottom: 14px;
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .subscribe-area .section-title .desc {
-    padding: 0 15px;
-  }
-}
-.subscribe-area .desc {
-  margin-bottom: 0;
-  padding: 0 70px;
-}
-.subscribe-area .subscribe-form-widget {
-  padding: 0 74px;
-  margin-top: -6px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .subscribe-area .subscribe-form-widget {
-    margin-top: 0;
-    padding: 0 15px;
-  }
-}
-.subscribe-area .subscribe-form-widget .mc4wp-form-fields {
-  border-radius: 0;
-  gap: 10px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .subscribe-area .subscribe-form-widget .mc4wp-form-fields {
-    justify-content: center;
-  }
-}
-.subscribe-area .subscribe-form-widget .single-field input {
-  border: 1px solid #e3e3e3;
-  color: #222;
-  padding: 0 20px;
-}
-.subscribe-area .subscribe-form-widget .submit-btn {
-  padding: 14px 24px;
-  color: #ffffff;
-  font-weight: 700;
-  line-height: 32px;
-  letter-spacing: 1.28px;
 }
 
 .product-area {
